<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222020"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
        tools:ignore="SpeakableTextPresentCheck"
        android:focusable="true"
         />


    <ImageView
        android:id="@+id/my_imageview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="110dp"
        android:layout_marginBottom="320dp"
        android:src="@drawable/aaa"
        />

    <EditText
        android:id="@+id/mail_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/e_mail"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/main_fab_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_imageview"
        android:autofillHints="emailAddress"
        android:inputType="text" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/parola"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/mail_field"
        android:autofillHints="password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="140dp"
        android:text="@string/logare"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_editor_absoluteX="160dp" />

    <TextView
        android:id="@+id/tv_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/nu_ai_cont"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <Button
        android:id="@+id/btn_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTintMode="add"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        app:layout_constraintStart_toEndOf="@id/tv_cont"
        android:layout_marginStart="12dp"
        android:text="@string/inregistreaza_te"
        android:textAllCaps="false"
        android:background="@android:color/transparent"
        />

    <TextView
        android:id="@+id/tv_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ai_uitat_parola"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/tv_cont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="30dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>